# batchly

./: .gitignore  PRD.md  README.md  REVIEW.md  pyproject.toml
.hypothesis/constants/: 1877783e35ebc5a6  1cd6656825135ff3  2b305eac4f5aad78  3733c8e8c32eddfd  455652197d4b6048  7a87ed63c3bf18f3  98d9adb54a7881fa  bd986656a63039f5  c99a604a90c6e8cf  cf8c5f4de04530c3
src/batchly/: __init__.py  batch.py  errors.py  filter_.py  foreach.py  map_.py  progress.py  rate_limit.py  result.py  retry.py
tests/: test_adversarial.py  test_batch.py  test_filter.py  test_foreach.py  test_integration.py  test_map.py  test_progress.py  test_rate_limit.py  test_retry.py  test_round2.py
