[project]
name = "batchly"
version = "0.1.0"
description = "Batch processing made simple — concurrency, retries, progress, and error handling"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Teja"}]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "hypothesis", "pytest-cov", "pytest-asyncio"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
